<resources>
    <string name="app_name">Gestion tienda</string>
    //principal
    <string name="b_agregar">+</string>
    <string name="nombre">Nombre</string>
    <string name="cif">NIF</string>
    <string name="correo">Correo</string>
    <string name="nombre1">Nombre:</string>
    <string name="cif1">NIF:</string>
    <string name="correo1">Correo:</string>

    <string name="precio">Precio</string>
    <string name="caducidad">Fecha Caducidad</string>
    <string name="precio1">Precio:</string>
    <string name="caducidad1">Fecha Caducidad:</string>
    <string name="preKG">€/Kg</string>

    <string name="npedido">Nº de Pedido</string>
    <string name="fecha">Fecha de realización</string>
    <string name="cantidad">Cantidad</string>

    <string name="menu_home">Proveedores</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_pedidos">Pedidos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>