<?xml version="1.0" encoding="utf-8"?><androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="#DFD6EC"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/np"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/npedido"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/produ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_productos"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/can"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/cantidad"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <ImageView
                android:id="@+id/b_eli_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_baseline_delete_24" />


            <ImageView
                android:id="@+id/b_edi_Pe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_baseline_edit_24" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>